[gd_scene load_steps=4 format=2]

[ext_resource path="res://body_gravity.gd" type="Script" id=1]
[ext_resource path="res://body.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleShape2D" id=2]
radius = 55.0
height = 98.0

[node name="body_gravity" type="RigidBody2D"]
collision_layer = 4
gravity_scale = 0.0
contacts_reported = 2
contact_monitor = true
script = ExtResource( 1 )

[node name="body" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_died" from="body" to="." method="_on_body_body_died"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
